# giggityflix-mgmt-peer

./: README.md  check_db.py  manage.py  pyproject.toml
src/giggityflix_mgmt_peer/: __init__.py  app.py  config.py  manage.py  urls.py  wsgi.py
src/giggityflix_mgmt_peer/admin/: configuration_admin.py
src/giggityflix_mgmt_peer/api/: router.py  serializers.py  urls.py
src/giggityflix_mgmt_peer/config/: django_config.py  django_settings.py
src/giggityflix_mgmt_peer/core/: annotations.py  resource_pool.py
src/giggityflix_mgmt_peer/drive_detection/: detection.py  fallback.py  linux.py  macos.py  windows.py
src/giggityflix_mgmt_peer/drive_pool/: __init__.py  apps.py
src/giggityflix_mgmt_peer/migrations/: 0001_initial.py  0002_configuration.py
src/giggityflix_mgmt_peer/models/: __init__.py  configuration_model.py
src/giggityflix_mgmt_peer/services/: configuration_service.py  drive_service.py  media_scanner_service.py
src/giggityflix_mgmt_peer/utils/: resizable_semaphore.py
src/giggityflix_mgmt_peer/v1/: app.py
src/giggityflix_mgmt_peer/v2/: __init__.py  app.py
src/giggityflix_mgmt_peer/v3/: direct_detect.py  settings.py  urls.py  wsgi.py
src/giggityflix_mgmt_peer/views/: configuration_views.py  drive_views.py
tests/: conftest.py  test_annotations.py  test_image_processor.py  test_resource_pool.py  test_resource_resize.py
tests/utils/: test_resizable_semaphore.py
tests/v1/: conftest.py  test_annotations.py  test_image_processor.py  test_resource_pool.py  test_resource_resize.py
tests/v1/utils/: test_resizable_semaphore.py
(+75 files in other folders)
